--- a/Rpackages.bib
+++ b/Rpackages.bib
@@ -25,7 +25,7 @@
   title = {dplyr: A Grammar of Data Manipulation},
   author = {Hadley Wickham and Romain François and Lionel Henry and Kirill Müller},
   year = {2021},
-  note = {R package version 1.0.5},
+  note = {R package version 1.0.7},
   url = {https://CRAN.R-project.org/package=dplyr},
 }
 
@@ -39,9 +39,9 @@
 
 @Manual{golem,
   title = {golem: A Framework for Robust Shiny Applications},
-  author = {Vincent Guyader and Colin Fay and Sébastien Rochette and Cervan Girard},
-  year = {2020},
-  note = {R package version 0.2.1},
+  author = {Colin Fay and Vincent Guyader and Sébastien Rochette and Cervan Girard},
+  year = {2021},
+  note = {R package version 0.3.1},
   url = {https://CRAN.R-project.org/package=golem},
 }
 
