--- a/Rpackages.bib
+++ b/Rpackages.bib
@@ -47,9 +47,9 @@
 
 @Manual{htmltools,
   title = {htmltools: Tools for HTML},
-  author = {Joe Cheng and Carson Sievert and Winston Chang and Yihui Xie and Jeff Allen},
+  author = {Joe Cheng and Carson Sievert and Barret Schloerke and Winston Chang and Yihui Xie and Jeff Allen},
   year = {2021},
-  note = {R package version 0.5.1.1},
+  note = {R package version 0.5.2},
   url = {https://CRAN.R-project.org/package=htmltools},
 }
 
@@ -82,7 +82,7 @@ Library},
   title = {shiny: Web Application Framework for R},
   author = {Winston Chang and Joe Cheng and JJ Allaire and Carson Sievert and Barret Schloerke and Yihui Xie and Jeff Allen and Jonathan McPherson and Alan Dipert and Barbara Borges},
   year = {2021},
-  note = {R package version 1.6.0},
+  note = {R package version 1.7.0},
   url = {https://CRAN.R-project.org/package=shiny},
 }
 
